fix(top-search): remove letter-spacing

--- a/app/styles/blocks/top-search.styl
+++ b/app/styles/blocks/top-search.styl
@@ -30,7 +30,6 @@
 		width 20.8%
 		line-height 168px
 		font-size 22px
-		letter-spacing -.1px
 		color #000
 
 	&-workhours
@@ -46,7 +45,6 @@
 			width 66px
 			font-size 12px
 			color #3a3a3a
-			letter-spacing -.3px
 			&_weekday
 				top 7px
 			&_weekend
